# point_and_click_2D_engine

./: CMakeLists.txt  Cursor.cpp  Example.cpp  Example.h  Player.cpp  Room.cpp  TODOs.txt  main.cpp
images/: maniac_mansion_polys.psd
rooms/: studio.h
src/: Cursor.cpp  Cursor.h  Game.cpp  Game.h  Item.cpp  Item.h  Music.cpp  Music.h  NavMesh.cpp  NavMesh.h  Node.cpp  Node.h  Pathfinder.cpp  Pathfinder.h  Player.cpp  Player.h  Polygon.cpp  Polygon.h  Room.cpp  Room.h  World.cpp  World.h  config.cpp  main.cpp
